--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -60,7 +60,7 @@
 
                     {{#if isRegister}}
                         <a class="btn btn-light action-button selected" role="button"
-                           href="/auth/register">Регистрация</a>
+                           href="/auth/register/#register">Регистрация</a>
                     {{else}}
                         <a class="btn btn-light action-button" role="button" href="/auth/register/#register">Регистрация</a>
                     {{/if}}
