--- a/views/auth/password.hbs
+++ b/views/auth/password.hbs
@@ -1,10 +1,12 @@
-{{#if error}}
-    <p class="alert">{{error}}</p>
-{{/if}}
-
 <div class="login-clean-reset">
     <form action="/auth/password" method="post">
         <h3>Новый пароль</h3>
+
+        {{#if error}}
+            <div class="alert alert-danger" role="alert">
+                {{error}}
+            </div>
+        {{/if}}
         <div class="form-group">
             <input type="password" class="form-control" id="password" name="password" required minlength="8"
                    maxlength="50">
