--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
                             <div style="text-align:center">
                                 <button class="btn btn-light btn-lg" type="button">
                                     {{#if isAuth}}
-                                        <a href="/todo">TODO</a>
+                                        <a href="/todo/#isTodo">TODO</a>
                                     {{else}}
                                         <a href="/auth/login#logIn">Войти</a>
                                     {{/if}}
