--- a/views/todo.hbs
+++ b/views/todo.hbs
@@ -6,13 +6,13 @@
             </div>
         {{/if}}
         <div class="wrap">
-            <form action="/add" method="post" autofocus autocomplete="off" style="box-shadow: 0 0 8px 1px #b3b3b3;
+            <form action="/add" method="post" autocomplete="off" style="box-shadow: 0 0 8px 1px #b3b3b3;
 ">
                 <div class="input-group">
                     <div class="input-group-prepend">
                         <button type="submit" class="btn btn-secondary" style="border-radius: 0">ДОБАВИТЬ</button>
                     </div>
-                    <input style="border-radius: 0" autofocus required type="text" name="title" id="title"
+                    <input autofocus autocapitalize="on" style="border-radius: 0" required type="text" name="title" id="title"
                            class="form-control"
                            aria-label="Text input with radio button" minlength="3" maxlength="100">
                 </div>
