--- a/public/css/index.css
+++ b/public/css/index.css
@@ -121,6 +121,23 @@ html, body {
     outline: 1px dotted #000;
 }
 
+.label-file {
+    color: #f7f9fc;
+    background: #3c3c45;
+    font-size: 18px;
+    padding: 5px 7px;
+    border-radius: 10px;
+    opacity: 1;
+    box-shadow: 0 -3px rgb(182, 182, 182) inset;
+}
+.label-file:hover{
+    opacity: 90%;
+    transition: 0.2s;
+}
+.label-file:active{
+    box-shadow: 0 3px rgb(161, 161, 161) inset;
+}
+
 body > nav > div > a.selected {
     text-decoration: underline;
 }
