--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -3,11 +3,12 @@
         <div class="form-container">
             <div class="image-holder"></div>
             <form method="post" action="/auth/register" autocomplete="off" id="register" novalidate>
+<!--                todo novalidate remove-->
                 <h2 class="text-center"><strong>Создать</strong>&nbsp;аккаунт</h2>
                 <div class="form-group"><input class="form-control" type="email" id="email" name="email"
-                                               placeholder="Email" required></div>
+                                               placeholder="Email" required value="{{data.email}}"></div>
                 <div class="form-group"><input class="form-control" required type="text" name="name" id="name"
-                                               placeholder="Имя" minlength="3" maxlength="50">
+                                               placeholder="Имя" minlength="3" maxlength="50" value="{{data.name}}">
                 </div>
                 <div class="form-group"><input class="form-control" minlength="8" maxlength="50" required
                                                type="password"
