--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light navbar-expand-md navigation-clean-button"
-     style="margin-bottom: 100px;box-shadow: 3px -6px 20px 0px;">
+     style="margin-bottom: 80px;box-shadow: 3px -6px 20px 0px;">
     {{#if isAuth}}
     <div class="container">
     {{#if isHome}}
@@ -15,9 +15,9 @@
         <ul class="nav navbar-nav d-flex justify-content-start align-items-start mr-auto">
             <li class="nav-item" role="presentation">
                 {{#if isTodo}}
-                <a class="nav-link text-secondary selected" style="text-decoration: underline; font-weight: bold" href="/todo">Todo</a>
+                <a class="nav-link text-secondary selected" style="text-decoration: underline; font-weight: bold" href="/todo/#isTodo">Todo</a>
                 {{else}}
-                <a class="nav-link text-secondary" href="/todo">Todo</a>
+                <a class="nav-link text-secondary" href="/todo/#isTodo">Todo</a>
                 {{/if}}
 
             </li>
