--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,4 @@
 <div>
-
     <form method="post" action="/profile" enctype="multipart/form-data">
 
         <div class="container">
@@ -18,21 +17,27 @@
                 {{/if}}
 
                 <div class="mb-3">
-                    <label for="file">Выберите файл</label>
+                    <label class="label-file" for="file">Выберите файл</label>
                     <input type="file" name="avatar" class="file" id="file">
                 </div>
             </div>
 
 
             <div class="card shadow mb-3">
-                <div class="card-header py-3">
-                    <p class="text-primary m-0 font-weight-bold">Профиль</p>
+
+
+                <div class="" align="center">
+                    {{#if error}}
+                        <div class="alert alert-danger" role="alert">
+                            {{error}}
+                        </div>
+                    {{/if}}
                 </div>
-                <div class="card-body">
+                <div class="card-body" id="profile">
                     <div class="form-row">
                         <div class="col">
                             <div class="form-group"><label for="username"><strong>Имя</strong></label>
-                                <input class="form-control" id="name" value="{{user.name}}" type="text" name="name"/>
+                                <input class="form-control" autofocus required minlength="3" maxlength="50" id="name" value="{{user.name}}" type="text" name="name"/>
                             </div>
                         </div>
                         <div class="col">
@@ -44,7 +49,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary btn-sm" type="submit">Сохранить изменения</button>
+                        <button class="btn btn-dark btn-sm" type="submit">Сохранить изменения</button>
                     </div>
 
                     <input type="hidden" name="_csrf" value="{{csrf}}">
