--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -2,8 +2,7 @@
     <div class="register-photo">
         <div class="form-container">
             <div class="image-holder"></div>
-            <form method="post" action="/auth/register" autocomplete="off" id="register" novalidate>
-<!--                todo novalidate remove-->
+            <form method="post" action="/auth/register" autocomplete="off" id="register">
                 <h2 class="text-center"><strong>Создать</strong>&nbsp;аккаунт</h2>
                 <div class="form-group"><input class="form-control" type="email" id="email" name="email"
                                                placeholder="Email" required value="{{data.email}}"></div>
