--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -15,9 +15,9 @@
         <ul class="nav navbar-nav d-flex justify-content-start align-items-start mr-auto">
             <li class="nav-item" role="presentation">
                 {{#if isTodo}}
-                <a class="nav-link text-secondary selected" style="text-decoration: underline; font-weight: bold" href="/todo/#isTodo">Todo</a>
+                <a class="nav-link text-secondary selected" style="text-decoration: underline; font-weight: bold" href="/todo/">Todo</a>
                 {{else}}
-                <a class="nav-link text-secondary" href="/todo/#isTodo">Todo</a>
+                <a class="nav-link text-secondary" href="/todo/">Todo</a>
                 {{/if}}
 
             </li>
