--- a/views/chart.hbs
+++ b/views/chart.hbs
@@ -16,7 +16,7 @@
             {{/if}}
         </div>
 
-        <div class="">
+        <div style="margin-bottom: 3.8rem">
             <div class="card shadow mb-4">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h6 class="text-secondary font-weight-bold m-0">Немного статистики</h6>
